--- a/index.html
+++ b/index.html
@@ -3,21 +3,129 @@
 
 <head>
   <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
   <title>画图</title>
+  <script src="http://at.alicdn.com/t/font_604327_rz9twwhtb5f561or.js"></script>
   <style>
+    * {
+      box-sizing: border-box;
+    }
+    h1, h2, h3, h4, h5, h6 {
+      margin: 0;
+      padding: 0;
+      font-weight: normal;
+    }
     body {
       margin: 0;
+      overflow: hidden;
     }
 
     #canvas {
       display: block;
-      background: green;
     }
 
     .tool {
       position: absolute;
       top: 0;
+      font-size: 40px;
+    }
+    .tool svg {
+      margin: 0 15px;
+    }
+    .tool svg.active {
+      color: red;
+    }
+    .tool .pencilSize {
+      display: inline-block;
+      width: 25px;
+      height: 5px;
+      background: #000;
+      vertical-align: middle;
+      transition: all 0.2s;
+    }
+    .tool .pencilSize.strong {
+      height: 10px;
+    }
+    .icon {
+      width: 1em;
+      height: 1em;
+      vertical-align: -0.15em;
+      fill: currentColor;
+      overflow: hidden;
+    }
+    .color {
+      position: absolute;
+      top: 70px;
+    }
+    .color > .green, .color > .red, .color > .yellow, .color > .black{
+      width: 20px;
+      height: 20px;
+      border-radius: 50%;
+      margin: 15px 5px;
+      transition: all 0.2s;
+    }
+    .green {
+      background: green;
+    }
+    .red {
+      background: red;
+    }
+    .yellow {
+      background: yellow;
+    }
+    .black {
+      background: black;
+    }
+    .color .active {
+      box-shadow: 0px 0px 10px #270808;
+      transform: scale(1.3);
+    }
+    .confirmBox {
+      display: none;
+      position: absolute;
+      top: 40%;
+      left: 50%;
+      width: 200px;
+      margin-left: -100px;
+      border: 1px solid #ccc;
+      border-radius: 10px;
+      background: #333;
+      color: rgb(255, 255, 255)
+    }
+    .confirmBox.show {
+      display: block;
+      animation: rebound 0.4s;
+    }
+    @keyframes rebound {
+      0% {
+        transform: scale(0);
+      }
+      80% {
+        transform: scale(1.2);        
+      }
+      100% {
+        transform: scale(1);        
+      }
+    }
+    .confirmBox.hide {
+      display: none;
+    }
+    .confirmBox .btn {
+      float: left;
+      width: 50%;
+      text-align: center;
+      line-height: 30px;
+    }
+    .confirmBox h3 {
+      border-bottom: 1px solid #ccc;
+      text-align: center;
+      line-height: 100px;
+    }
+    .confirmBox span:first-of-type {
+      border-right: 1px solid #ccc;
+    }
+    .confirmBox span:last-of-type {
+      border-left: 1px solid #ccc;
     }
   </style>
 </head>
@@ -25,8 +133,32 @@
 <body>
   <canvas id="canvas" class="canvas"></canvas>
   <div class="tool">
-    <button class="eraser" id="eraser">橡皮擦</button>
+    <svg class="icon active" aria-hidden="true"  id="pencil">
+      <use xlink:href="#icon-pencil"></use>
+    </svg>
+    <svg class="icon" aria-hidden="true" id="eraser">
+      <use xlink:href="#icon-eraser"></use>
+    </svg>
+    <svg class="icon" aria-hidden="true" id="delete">
+      <use xlink:href="#icon-delete"></use>
+    </svg>
+    <svg class="icon" aria-hidden="true" id="downpct">
+      <use xlink:href="#icon-icon--"></use>
+    </svg>
+    <span class="pencilSize" id="pencilSize"></span>
+  </div>
+  <div class="color" id="colorBox">
+    <div class="black active" data-color="black" id="defaultColor"></div>
+    <div class="green" data-color="green"></div>
+    <div class="yellow" data-color="yellow"></div>
+    <div class="red" data-color="red"></div>
+  </div>
+  <div class="confirmBox" id="confirmBox">
+    <h3 id="confirText" class="confirText">你确定要清空吗？</h3>
+    <span class="btn" id="confirm">确认</span>
+    <span class="btn" id="clear">取消</span>
   </div>
   <script src="js/main.js"></script>
 </body>
+
 </html>
