--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
   <title>画图</title>
-  <script src="http://at.alicdn.com/t/font_604327_rz9twwhtb5f561or.js"></script>
+  <script src="//at.alicdn.com/t/font_604327_rz9twwhtb5f561or.js"></script>
   <style>
     * {
       box-sizing: border-box;
